# generable

./: Cargo.toml  flake.nix  readme.md
codegen/: Cargo.toml
codegen/src/: compound.rs  lib.rs  lib_old
src/: lib.rs  main.rs  oai_req_template.txt
src/dynamic/: mod.rs  node.rs  numbers.rs  schema.rs
src/schema/: cache.rs  generable.rs  mod.rs  primitives.rs
src/testing/: example_types.rs  mod.rs  sampler.rs
