[package]
name = "generable"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
thiserror = "2.0.18"
codegen = {path = "./codegen"}
uuid = "1.21.0"


[dev-dependencies]
outlines-core = {version= "0.2.14", default-features = false}
jsonschema = {version= "0.41.0", default-features = false}
rand = "0.10.0"
